[Windows] Provide ASM implemenation of 8-bit compare-and-swap https://bugs.webkit.org/show_bug.cgi?id=119084

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-07-25
Reviewed by Brent Fulgham.

* wtf/Atomics.h:
(WTF::weakCompareAndSwap): Add a 32-bit X86 Assembly path for
Windows build.



Canonical link: https://commits.webkit.org/137129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153345 268f45cc-cd09-0410-ab3c-d52691b4dbfc